# go

./: BUILD.bazel  LICENSE  MODULE.bazel  README  README.md  WORKSPACE  go.mod  go.sum  go_deps.bzl
.github/workflows/: build.yml  go.yml  go_build_test.yml  main.yml  nightly.yaml  pr.yaml  push.yaml
.trunk/: trunk.yaml
pkg/connect-interceptors/: BUILD.bazel  firebase_auth_iterceptor.go  panic_interceptor.go
pkg/connect-middlewares/: BUILD.bazel  README.md  firebase_auth.go
pkg/connect/interceptors/: BUILD.bazel  panic_interceptor.go
pkg/connect/middlewares/: BUILD.bazel  README.md  firebase_auth.go
pkg/logger/: BUILD.bazel  logger.go  otelzap_logger.go  zap_logger.go
pkg/logger/mock/: BUILD.bazel  logger.go
pkg/orm/pg/: column.go  datatype.go  field.go  integer.go  table.go  varchar.go
src/: WORKSPACE
