module(
    name = "ride_go",
    version = "0.2",
)

bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.44.2", repo_name = "io_bazel_rules_go")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_authn",
    "com_connectrpc_connect",
    "com_github_golang_jwt_jwt_v5",
    "com_github_micahparks_keyfunc_v3",
    "org_uber_go_zap",
)
