load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptors",
    srcs = ["panic_interceptor.go"],
    importpath = "github.com/dragonfish/go/v2/pkg/connect/interceptors",
    visibility = ["//visibility:public"],
    deps = ["@com_connectrpc_connect//:connect"],
)

alias(
    name = "go_default_library",
    actual = ":interceptors",
    visibility = ["//visibility:public"],
)
